--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <i class="bi bi-search search-icon"></i>
         </div>
         <div class="weather">
-            <img src="assets/asset 1.png" alt="Cloud">
+            <img src="assets/asset 1.png" class="icon" alt="Cloud">
             <div class="weather-text">
                 <p class="des"></p>
-                <h2><span class="temp">0</span><sup>o</sup><span class="celcious">C</span></h2>
+                <h2><span class="temp">0</span><span class="celcious">°C</span></h2>
                 <span class="city name">-</span>
             </div>
         </div>
@@ -43,5 +43,7 @@
         </div>
     </div>
     <div><p class="date"></p></div>
+
+    <div class="popup"></div>
 </body>
 </html>
